WIP: Migrate XCMailr Jetty Starter to Java11